[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-asyncutils"
version = "0.9.0"
authors = [{name = "Jonathan Dung", email = "jonathandung@yahoo.com"}]
maintainers = [{name = "Jonathan Dung", email = "jonathandung@yahoo.com"}]
description = "A library containing versatile tools to well complement the asyncio framework. Not as performant as C extensions, but startup speed is great considering the features it provides."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE", "AUTHORS.md"]
keywords = ["asynchronous", "convenient", "fast", "feature-rich", "helpers", "light", "utilities"]
classifiers = ["Environment :: Console", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14", "Programming Language :: Python :: 3.15", "Programming Language :: Python :: Implementation :: CPython", "Operating System :: OS Independent", "Development Status :: 3 - Alpha", "Intended Audience :: Developers", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: Software Development :: Version Control :: Git", "Topic :: Utilities", "Framework :: AsyncIO", "Framework :: Pytest", "Framework :: Sphinx", "Natural Language :: English", "Typing :: Typed"]

[project.urls]
Homepage = "https://github.com/jonathandung/asyncutils"
Documentation = "https://asyncutils.readthedocs.io/en/stable/api/index.html"
Repository = "https://github.com/jonathandung/asyncutils.git"
Issues = "https://github.com/jonathandung/asyncutils/issues"
Changelog = "https://github.com/jonathandung/asyncutils/blob/main/CHANGELOG.md"
Download = "https://pypi.org/project/py-asyncutils/#files"
"Release Notes" = "https://github.com/jonathandung/asyncutils/releases/tag/0.9.0"

[project.scripts]
asyncutils = 'asyncutils.cli:run'
autils = 'asyncutils.cli:run'

[project.optional-dependencies]
all = ["py-asyncutils[dev,pconf,ptw]==0.9.0"]
dev = ["pre-commit>=4.6.0", "py-asyncutils[docs,pub,test,tools]==0.9.0"]
dlint = ["doc8>=2.0.0", "sphinx-lint>=1.0.2"]
docs = ["sphinx>=9.1.0", "sphinx-rtd-theme>=3.1.0", "sphinx-notfound-page>=1.1.0", "sphinx-autoapi>=3.8.0", "py-asyncutils[dlint]==0.9.0"]
pconf = ["hjson>=3.1.0", "json-with-comments>=1.2.10", "PyYAML>=6.0.3", "py-asyncutils[json5]==0.9.0"]
json5 = ["json5>=0.14.0"]
pub = ["build>=1.4.4", "twine[keyring]>=6.2.0", "packaging>=26.2"]
ptw = ["pytest-watch>=4.2.0"]
test = ["pytest>=9.0.3", "pytest-asyncio>=1.3.0", "pytest-cov>=7.1.0", "pytest-local-badge>=1.0.3", "pytest-xdist>=3.8.0", "py-asyncutils[json5]==0.9.0"]
tools = ["mypy>=1.20.2", "uv>=0.11.8"]

[tool.setuptools]
packages = ["asyncutils", "asyncutils._internal"]

[tool.mypy]
python_version = "3.12"
files = ["asyncutils/**/*.pyi"]
follow_imports = "skip"
warn_unreachable = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_incomplete_stub = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_any_generics = true
extra_checks = true
exclude_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = ["-v", "--tb", "short", "--cov", "asyncutils", "--cov-report", "term-missing", "--cov-fail-under", "52", "-n", "auto"]
minversion = "9.0.3"
required_plugins = ["pytest-asyncio>=1.3.0", "pytest-cov>=7.1.0", "pytest-local-badge>=1.0.3", "pytest-xdist>=3.8.0"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"

[tool.coverage.run]
source = ["asyncutils"]
omit = ["*/__main__.py", "*/_internal/compat.py", "*/_internal/py313.py", "*/_internal/py312.py", "*/console.py", "*/cli.py"]

[tool.coverage.report]
exclude_lines = [".*# pragma: no (cover|branch)", "if __name__ == '__main__':", "raise NotImplementedError", "def __repr__\\(self.*\\):", "\\.\\.\\."]

[tool.ruff]
target-version = "py312"
exclude = [".git", "__pycache__", "build", "dist", "venv", "env", ".venv", ".env", "*.egg-info", ".eggs", ".mypy_cache", ".pytest_cache", "docs/source/conf.py"]

[tool.ruff.lint]
ignore = ["ANN401", "ASYNC109", "B904", "B905", "E226", "E227", "E228", "E252", "E261", "E301", "E302", "E305", "E306", "E401", "E501", "E701", "E702", "E741", "E743", "N803", "N806", "N812", "N818", "PLC0415", "PLC2701", "PLC2801", "PLW1514", "RET502", "RET503", "TRY003", "TRY300", "W292"]
select = ["A", "ARG", "ANN", "ASYNC", "B", "BLE001", "COM819", "C4", "C901", "E", "EM103", "ERA001", "EXE", "F", "FIX002", "FLY002", "FURB", "G", "ISC", "LOG", "N", "PERF", "PIE", "PGH004", "PL", "PYI", "RET", "RSE102", "RUF", "S", "SIM", "SLOT", "T100", "T201", "TRY", "UP", "W", "YTT"]
logger-objects = ["asyncutils._internal.log"]
preview = true
typing-extensions = false

[tool.ruff.lint.per-file-ignores]
"**/*.py" = ["ANN", "FURB180", "PYI"]
"**/*.pyi" = ["PYI021", "PYI036", "PYI042"]
"**/__init__.py" = ["RUF067"]
"**/__init__.pyi" = ["F403", "F405"]
"asyncutils/con*" = ["N801"]
"asyncutils/iterclasses.py*" = ["N801"]
"asyncutils/_internal/compat.py*" = ["F403", "F405"]
"asyncutils/_internal/py31*.py" = ["E402"]
"tests/**" = ["ARG001", "B018", "F401", "F403", "F405", "N", "PLC2701", "PLR2004", "RUF018", "RUF029", "RUF043", "S"]
"asyncutils/__init__.py" = ["E402"]
"asyncutils/_internal/py312.py" = ["ARG002", "SIM105"]
"asyncutils/base.py" = ["B008", "E722", "RUF029"]
"asyncutils/config.py" = ["BLE001", "SIM115"]
"asyncutils/console.py" = ["BLE001"]
"asyncutils/exceptions.py" = ["PLW0603"]
"asyncutils/io.py" = ["PLR6301", "PLW2901"]
"asyncutils/iters.py" = ["N801", "PLR2004", "RUF029"]
"asyncutils/locks.py" = ["ARG002", "BLE001", "E722", "PLR6301"]
"asyncutils/queues.py" = ["A001", "A002", "ARG002", "B008", "E722", "PLR6301"]
"asyncutils/rwlocks.py" = ["N801"]
"asyncutils/version.py" = ["B008", "FURB101", "FURB103", "PLR2004"]
"asyncutils/_internal/log.pyi" = ["A001", "A002", "N802"]
"asyncutils/func.pyi" = ["N801"]
"asyncutils/queues.pyi" = ["A001", "A002", "PYI011"]
"tests/test_signals.py" = ["RUF006"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["__import__", "_functools.partial", "_operator.attrgetter", "_operator.itemgetter", "_operator.methodcaller", "asyncutils._internal.compat.partial", "asyncutils.exceptions.IgnoreErrors", "asyncutils.IgnoreErrors", "collections.namedtuple", "functools.partial", "globals", "itertools.count", "sys.intern", "type"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "single"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.mccabe]
max-complexity = 24

[tool.ruff.lint.pyflakes]
allowed-unused-imports = ["asyncutils._internal.submodules"]

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["__setup__", "__cleanup__"]
max-returns = 10
max-args = 13
max-positional-args = 7
max-public-methods = 46
max-branches = 18
max-nested-blocks = 6

[tool.doc8]
max-line-length = 150
extension = ["rst"]
